<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/texto_inicial"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTitulo"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:hint="@string/hint_titulo"
        android:padding="15dp" />

    <EditText
        android:id="@+id/editTextNoticia"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:gravity="start"
        android:hint="@string/hint_noticia"
        android:padding="15dp" />

    <EditText
        android:id="@+id/editTextData"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:hint="@string/hint_data"
        android:padding="15dp" />

    <EditText
        android:id="@+id/editTextAutor"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:hint="@string/hint_autor"
        android:padding="15dp" />
    <Button
        android:id="@+id/btPublicar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_button_publicar"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:padding="15dp"
        android:backgroundTint="@color/purple_500"/>
</LinearLayout>